--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
     flex-wrap: wrap;
   }
   
-  .product-card {
+  .product-card, .product-cardS {
     background: var(--product-color);
     border: 1px solid #bab9b9;
     border-radius: 10px;
@@ -106,7 +106,7 @@ body {
     animation: fadeIn 1s ease-in-out;
   }
 
-  .product-card:hover {
+  .product-card:hover, .product-cardS:hover {
     animation: bounce 0.5s;
   }
   
